# webcam-background-remover

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  dip.yml  docker-compose.yml  install.sh
background-removal/: Cargo.toml
background-removal-opencv/: Cargo.toml
background-removal-opencv/src/: lib.rs
background-removal/src/: lib.rs
cli-opencv/: Cargo.toml
cli-opencv/src/: main.rs
core-traits/: Cargo.toml
core-traits/src/: lib.rs
gstreamer/: Cargo.toml
