[package]
name = "cli-opencv"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
background-removal = { path = "../background-removal-opencv" }
color-eyre = "0.5"
core-traits = { path = "../core-traits" }
opencv = { version = "0.45", default-features = false, features = ["contrib", "buildtime-bindgen", "opencv-4", "clang-runtime"] }
